--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -141,7 +141,7 @@
     <string name="sd_card">SD kartica</string>
     <string name="root">Root</string>
     <string name="wrong_root_selected">Odabrana je pogrešana mapa, molimo odaberite root mapu Vaše SD kartice</string>
-    <string name="sd_card_otg_same">SD kartice i OTG putevi uređaja ne mogu biti isti</string>
+    <string name="sd_card_usb_same">SD kartice i USB putevi uređaja ne mogu biti isti</string>
     <string name="app_on_sd_card">Čini se da je aplikacija instalirana na SD karticu, što čini widgete aplikacije nedostupnim. Nećete ih čak ni vidjeti na popisu dostupnih widgeta.
         To je ograničenje sustava, pa ako želite upotrebljavati widgete, morate vratiti aplikaciju na unutarnju pohranu..</string>
 
@@ -455,10 +455,10 @@
     <string name="no_entries_for_exporting">Nije pronađen nijedan unos za izvoz</string>
 
     <!-- OTG devices -->
-    <string name="otg">OTG</string>
-    <string name="otg_detected">You seem to have an OTG device attached to your device. To make sure its files appear properly, you need to grant additional permissions.</string>
-    <string name="confirm_otg_storage_access_text">Molimo odaberite root mapu OTG uređaja na sljedećem zaslonu, kako biste odobrili pristup</string>
-    <string name="wrong_root_selected_otg">Odabrana mapa je pogrešna, odaberite root mapu svog OTG uređaja</string>
+    <string name="usb">USB</string>
+    <string name="usb_detected">You seem to have an USB device attached to your device. To make sure its files appear properly, you need to grant additional permissions.</string>
+    <string name="confirm_usb_storage_access_text">Molimo odaberite root mapu USB uređaja na sljedećem zaslonu, kako biste odobrili pristup</string>
+    <string name="wrong_root_selected_usb">Odabrana mapa je pogrešna, odaberite root mapu svog USB uređaja</string>
 
     <!-- Dates -->
     <string name="january">Siječanj</string>
