--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -138,7 +138,7 @@
     <string name="sd_card">SD-kort</string>
     <string name="root">Rot</string>
     <string name="wrong_root_selected">Feil mappe er valgt, velg rotmappen til SD-kortet</string>
-    <string name="sd_card_otg_same">Bane for SD-kort og OTG-enhet kan ikke være den samme</string>
+    <string name="sd_card_usb_same">Bane for SD-kort og USB-enhet kan ikke være den samme</string>
     <string name="app_on_sd_card">You seem to have the app installed on an SD card, that makes the app widgets unavailable. You won\'t even see them on the list of available widgets.
         It is a system limitation, so if you want to use the widgets, you have to move the app back on the internal storage.</string>
 
@@ -435,10 +435,10 @@
     <string name="no_entries_for_exporting">Ingen oppføringer for eksportering er funnet</string>
 
     <!-- OTG devices -->
-    <string name="otg">OTG</string>
-    <string name="otg_detected">You seem to have an OTG device attached to your device. To make sure its files appear properly, you need to grant additional permissions.</string>
-    <string name="confirm_otg_storage_access_text">Velg rotmappen til OTG-enheten på den neste skjermen for å gi tilgang</string>
-    <string name="wrong_root_selected_otg">Feil mappe valgt, velg rotmappen til OTG-enheten din</string>
+    <string name="usb">USB</string>
+    <string name="usb_detected">You seem to have an USB device attached to your device. To make sure its files appear properly, you need to grant additional permissions.</string>
+    <string name="confirm_usb_storage_access_text">Velg rotmappen til USB-enheten på den neste skjermen for å gi tilgang</string>
+    <string name="wrong_root_selected_usb">Feil mappe valgt, velg rotmappen til USB-enheten din</string>
 
     <!-- Dates -->
     <string name="january">Januar</string>
