--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -209,7 +209,7 @@
     <string name="hide_folder">Skjul mappe</string>
     <string name="unhide_folder">Ikke skjul mappe</string>
     <string name="temporarily_show_hidden">Vis skjulte midlertidig</string>
-    <string name="stop_showing_hidden">Stopp å vise skjulte media</string>
+    <string name="stop_showing_hidden">Stopp å vise skjulte medier</string>
     <string name="maximum_share_reached">Du kan ikke dele så mye innhold på en gang</string>
     <string name="empty_and_disable_recycle_bin">Tøm og deaktiver papirkurven</string>
     <string name="undo">Angre</string>
