--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -577,7 +577,7 @@
     <string name="gson_title">Gson (analisador JSON)</string>
     <string name="leak_canary_title">Leak Canary (detector de vazamento de memória)</string>
     <string name="number_picker_title">Number Picker (selecionador personalizável de número)</string>
-    <string name="exoplayer_title">ExoPlayer (video player)</string>
+    <string name="exoplayer_title">ExoPlayer (vídeo player)</string>
     <string name="panorama_view_title">VR Panorama View (displaying panoramas)</string>
     <string name="sanselan_title">Apache Sanselan (reading image metadata)</string>
     <string name="filters_title">Android Photo Filters (image filters)</string>
