--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="never">Never</string>
     <string name="details">Details</string>
     <string name="notes">Notes</string>
-    <string name="deleting_folder">Deleting folder \'%s\'</string>
+    <string name="deleting_folder">Deleting folder \'%s\'…</string>
     <string name="none">None</string>
     <string name="label">Label</string>
     <string name="transparent">Transparent</string>
@@ -34,7 +34,7 @@
 
     <!-- Filters -->
     <string name="filter">Filter</string>
-    <string name="no_items_found">No items found.</string>
+    <string name="no_items_found">No items found</string>
     <string name="change_filter">Change filter</string>
 
     <!-- Permissions -->
@@ -50,9 +50,9 @@
     <string name="rename_folder_error">Could not rename the folder</string>
     <string name="rename_folder_empty">Folder name must not be empty</string>
     <string name="rename_folder_exists">A folder with that name already exists</string>
-    <string name="rename_folder_root">Cannot rename the root folder of a storage</string>
+    <string name="rename_folder_root">Cannot rename the root folder of a storage system</string>
     <string name="rename_folder_ok">Folder renamed successfully</string>
-    <string name="renaming_folder">Renaming folder</string>
+    <string name="renaming_folder">Renaming folder…</string>
     <string name="filename_cannot_be_empty">Filename cannot be empty</string>
     <string name="filename_invalid_characters">Filename contains invalid characters</string>
     <string name="filename_invalid_characters_placeholder">Filename \'%s\' contains invalid characters</string>
@@ -65,8 +65,8 @@
     <string name="copy">Copy</string>
     <string name="move">Move</string>
     <string name="copy_move">Copy / Move</string>
-    <string name="copy_to">Copy to</string>
-    <string name="move_to">Move to</string>
+    <string name="copy_to">Copy to…</string>
+    <string name="move_to">Move to…</string>
     <string name="source">Source</string>
     <string name="destination">Destination</string>
     <string name="select_destination">Select destination</string>
@@ -112,7 +112,7 @@
     <string name="select_folder">Select a folder</string>
     <string name="select_file">Select a file</string>
     <string name="confirm_storage_access_title">Confirm external storage access</string>
-    <string name="confirm_storage_access_text">Please choose the root folder of the SD card on the next screen, to grant write access</string>
+    <string name="confirm_storage_access_text">Please choose the root folder of the SD card on the next screen to grant write access</string>
     <string name="confirm_storage_access_text_sd">If you don\'t see the SD card, try this</string>
     <string name="confirm_selection">Confirm selection</string>
 
@@ -137,10 +137,10 @@
     <string name="internal">Internal</string>
     <string name="sd_card">SD Card</string>
     <string name="root">Root</string>
-    <string name="wrong_root_selected">Wrong folder selected, please select the root folder of your SD card</string>
+    <string name="wrong_root_selected">Wrong folder selected; please select the root folder of your SD card</string>
     <string name="sd_card_usb_same">SD card and USB device paths cannot be the same</string>
-    <string name="app_on_sd_card">You seem to have the app installed on an SD card, that makes the app widgets unavailable. You won\'t even see them on the list of available widgets.
-        It is a system limitation, so if you want to use the widgets, you have to move the app back on the internal storage.</string>
+    <string name="app_on_sd_card">You seem to have the app installed on an SD card; that makes the app widgets unavailable. You won\'t even see them on the list of available widgets.
+        This is a system limitation, so if you want to use the widgets, you have to move the app back to the internal storage.</string>
 
     <!-- File properties -->
     <string name="properties">Properties</string>
@@ -175,12 +175,12 @@
     <string name="discard">Discard</string>
     <string name="undo_changes">Undo changes</string>
     <string name="undo_changes_confirmation">Are you sure you want to undo your changes?</string>
-    <string name="save_before_closing">You have unsaved changes. Save before exit?</string>
+    <string name="save_before_closing">You have unsaved changes. Save before exiting?</string>
     <string name="apply_to_all_apps">Apply colors to all Simple Apps</string>
-    <string name="share_colors_success">Colors updated successfully. A new Theme called \'Shared\' has been added, please use that for updating all app colors in the future.</string>
+    <string name="share_colors_success">Colors updated successfully. A new theme called \'Shared\' has been added. Please use that for updating all app colors in the future.</string>
     <string name="purchase_thank_you">
         <![CDATA[
-            Please purchase <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> to unlock this function and support the development. Thanks!
+            Please purchase <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> to unlock this function and support development. Thanks!
         ]]>
     </string>
 
@@ -263,7 +263,7 @@
     <string name="no_fingerprints_registered">You have no fingerprints registered, please add some in the Settings of your device</string>
     <string name="go_to_settings">Go to Settings</string>
     <string name="protection_setup_successfully">Password setup successfully. Please reinstall the app in case you forget it.</string>
-    <string name="fingerprint_setup_successfully">Protection setup successfully. Please reinstall the app in case of problems with reseting it.</string>
+    <string name="fingerprint_setup_successfully">Protection setup successfully. Please reinstall the app if you have problems resetting it.</string>
 
     <!-- Times -->
     <string name="yesterday">Yesterday</string>
@@ -354,7 +354,7 @@
     <string name="reminder_triggers_in">Time remaining till the reminder triggers:\n%s</string>
     <string name="alarm_warning">Please make sure the alarm works properly before relying on it. It could misbehave due to system restrictions related to battery saving.</string>
     <string name="reminder_warning">Please make sure the reminders work properly before relying on them. They could misbehave due to system restrictions related to battery saving.</string>
-    <string name="notifications_disabled">Notifications of this application are disabled. Please go in your device settings for enabling them.</string>
+    <string name="notifications_disabled">Notifications of this application are disabled. Please go in your device settings to enable them.</string>
 
     <!-- Alarms -->
     <string name="alarm">Alarm</string>
@@ -414,31 +414,31 @@
     <string name="restore_all_files">Restore all files</string>
     <string name="recycle_bin_emptied">The Recycle Bin has been emptied successfully</string>
     <string name="files_restored_successfully">Files have been restored successfully</string>
-    <string name="empty_recycle_bin_confirmation">Are you sure you want to empty the Recycle Bin? The files will be permanently lost.</string>
+    <string name="empty_recycle_bin_confirmation">Are you sure you want to empty the Recycle Bin? The files will be permanently deleted.</string>
     <string name="recycle_bin_empty">The Recycle Bin is empty</string>
-    <string name="moving_recycle_bin_items_disabled">Moving Recycle bin items is disabled, please use Restore</string>
+    <string name="moving_recycle_bin_items_disabled">Moving Recycle Bin items is disabled; please use Restore</string>
 
     <plurals name="moving_items_into_bin">
-        <item quantity="one">Moving %d item into the Recycle Bin</item>
-        <item quantity="other">Moving %d items into the Recycle Bin</item>
+        <item quantity="one">Moving %d item into the Recycle Bin…</item>
+        <item quantity="other">Moving %d items into the Recycle Bin…</item>
     </plurals>
 
     <!-- Import / Export -->
     <string name="importing">Importing…</string>
     <string name="exporting">Exporting…</string>
-    <string name="importing_successful">Importing successful</string>
-    <string name="exporting_successful">Exporting successful</string>
-    <string name="importing_failed">Importing failed</string>
-    <string name="exporting_failed">Exporting failed</string>
-    <string name="importing_some_entries_failed">Importing some entries failed</string>
-    <string name="exporting_some_entries_failed">Exporting some entries failed</string>
+    <string name="importing_successful">Import successful</string>
+    <string name="exporting_successful">Export successful</string>
+    <string name="importing_failed">Import failed</string>
+    <string name="exporting_failed">Export failed</string>
+    <string name="importing_some_entries_failed">Failed to import some entries</string>
+    <string name="exporting_some_entries_failed">Failed to export some entries</string>
     <string name="no_entries_for_exporting">No entries for exporting have been found</string>
 
     <!-- OTG devices -->
     <string name="usb">USB</string>
     <string name="usb_detected">You seem to have an USB device attached to your device. To make sure its files appear properly, you need to grant additional permissions.</string>
-    <string name="confirm_usb_storage_access_text">Please choose the root folder of the USB device on the next screen, to grant access</string>
-    <string name="wrong_root_selected_usb">Wrong folder selected, please select the root folder of your USB device</string>
+    <string name="confirm_usb_storage_access_text">Please choose the root folder of the USB device on the next screen to grant access</string>
+    <string name="wrong_root_selected_usb">Wrong folder selected; please select the root folder of your USB device</string>
 
     <!-- Dates -->
     <string name="january">January</string>
@@ -494,14 +494,14 @@
 
     <!-- Pro version -->
     <string name="upgrade_to_pro_long">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
-    <string name="it_is_free">It is free till: %s. If you download it till then, you will be able to use it for free forever.</string>
+    <string name="it_is_free">It is free until: %s. If you download it before then, you will be able to use it for free forever.</string>
     <string name="more_info">More info</string>
     <string name="upgrade">Upgrade</string>
-    <string name="upgrade_calendar">You have to migrate locally stored events manually via exporting in an .ics file, then importing. You can find both export/import buttons at the main screen menu.</string>
+    <string name="upgrade_calendar">You have to migrate locally stored events manually via exporting in an .ics file, then importing. You can find both export/import buttons in the main screen menu.</string>
 
     <!-- About -->
     <string name="about">About</string>
-    <string name="website_label">For the source codes visit</string>
+    <string name="website_label">For the source codes, visit</string>
     <string name="email_label">Send your feedback or suggestions to</string>
     <string name="upgrade_to_pro">Upgrade to Pro</string>
     <string name="more_apps_underlined"><u>More apps</u></string>
@@ -520,13 +520,13 @@
     <string name="donate_please">
         <![CDATA[
             Hello,<br><br>
-            hope you are enjoying the app. It contains no ads, please support its development by purchasing the <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> app, it will also prevent this dialog from showing up again.<br><br>
+            hope you are enjoying the app. It contains no ads; please support its development by purchasing the <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> app, it will also prevent this dialog from showing up again.<br><br>
             Thank you!
         ]]>
     </string>
     <string name="purchase">Purchase</string>
     <string name="update_thank_you">Please update Simple Thank You to the latest version</string>
-    <string name="before_asking_question_read_faq">Before you ask a question, please read the Frequently Asked Questions first, maybe the solution is there.</string>
+    <string name="before_asking_question_read_faq">Before you ask a question, please read the Frequently Asked Questions first (maybe the solution is there).</string>
     <string name="read_it">Read it</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
@@ -536,28 +536,43 @@
             just letting you know that a new app has been released recently:<br><br>
             <a href="%1$s">%2$s</a><br><br>
             You can download it by pressing the title.<br><br>
-            Thanks
+            Thanks.
         ]]>
     </string>
 
     <!-- FAQ -->
-    <string name="frequently_asked_questions">Frequently asked questions</string>
+    <string name="frequently_asked_questions">Frequently Asked Questions</string>
     <string name="before_asking_question">Before you ask a question, please first read the</string>
-    <string name="faq_1_title_commons">How come I don\'t see this apps widget on the list of widgets?</string>
-    <string name="faq_1_text_commons">It is most likely because you moved the app on an SD card. There is an Android system limitation which hides the given app widgets
-        in that case. The only solution is to move the app back onto the Internal Storage via your device settings.</string>
+    <string name="faq_1_title_commons">How come I don\'t see this app\'s widget on the list of widgets?</string>
+    <string name="faq_1_text_commons">
+        It is most likely because you moved the app to an SD card.
+        There is an Android system limitation which hides the given app widgets in that case.
+        The only solution is to move the app back to the internal storage via your device settings.
+    </string>
     <string name="faq_2_title_commons">I want to support you, but I cannot donate money. Is there anything else I can do?</string>
-    <string name="faq_2_text_commons">Yes, of course. You can spread the word about the apps or give good feedback and ratings. You can also help by translating the apps in a new language, or just update some existing translations.
-        You can find the guide at https://github.com/SimpleMobileTools/General-Discussion , or just shoot me a message at hello@simplemobiletools.com if you need help.</string>
+    <string name="faq_2_text_commons">
+        Yes, of course. You can spread the word about the apps or give good feedback and ratings.
+        You can also help by translating the apps in a new language, or just update some existing translations.
+        You can find the guide at https://github.com/SimpleMobileTools/General-Discussion , or just shoot me a message at hello@simplemobiletools.com if you need help.
+    </string>
     <string name="faq_3_title_commons">I deleted some files by mistake, how can I recover them?</string>
-    <string name="faq_3_text_commons">Sadly, you cannot. Files are deleted instantly after the confirmation dialog, there is no trashbin available.</string>
+    <string name="faq_3_text_commons">Sadly, you cannot. Files are deleted instantly after the confirmation dialog. There is no trash bin available.</string>
     <string name="faq_4_title_commons">I don\'t like the widget colors, can I change them?</string>
-    <string name="faq_4_text_commons">Yep, as you drag a widget on your home screen a widget config screen appears. You will see colored squares at the bottom left corner, just press them to pick a new color. You can use the slider for adjusting the alpha too.</string>
+    <string name="faq_4_text_commons">
+        Yep. as you drag a widget on your home screen, a widget config screen appears.
+        You will see colored squares at the bottom left corner.
+        Just press them to pick a new color.
+        You can use the slider to adjust the alpha as well.
+    </string>
     <string name="faq_5_title_commons">Can I somehow restore deleted files?</string>
-    <string name="faq_5_text_commons">If they were really deleted, you cannot. However, you can enable using a Recycle Bin instead of deleting in the app settings. That will just move the files in it instead of deleting them.</string>
+    <string name="faq_5_text_commons">
+        If they were really deleted, you cannot.
+        However, you can enable a Recycle Bin in the app settings.
+        That will just move the files into the Recycle Bin instead of deleting them.
+    </string>
 
     <!-- License -->
-    <string name="notice">This app uses the following third party libraries to make my life easier. Thank you.</string>
+    <string name="notice">This app uses the following third party libraries to make my life easier. Thank you to these awesome libraries.</string>
     <string name="third_party_licences">Third party licences</string>
     <string name="kotlin_title">Kotlin (programming language)</string>
     <string name="subsampling_title">Subsampling Scale Image View (zoomable imageviews)</string>
