--- a/samples/src/main/res/values/strings.xml
+++ b/samples/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="smtco_app_name">Simple Commons</string>
+    <string name="smtco_app_name" translatable="false">Simple Commons</string>
 </resources>
